# Krish-Ai-

./: .gitignore  README.md  pyproject.toml
.github/workflows/: android.yml
src/: ai.py  config.py  main.py  memory.py  voice.py  websearch.py
